[package]
name = "bkt"
version = "0.2.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = {version = "0.27.0-rc4"}
tokio = {version = "1.10", features = ["full"]}
quicli = "0.4"
structopt = "0.2"
serde = "1.0"
dirs = "3.0.2"
toml = "0.5.8"
walkdir = "2"
circle-rs = {version = "*", features = ["end"]}
indicatif = "0.17.0-beta.1"
num_cpus = "1.13"